--- a/tinker.css
+++ b/tinker.css
@@ -39,13 +39,20 @@ div.github-buttons {
     width: calc(100% - 2*var(--margin));
 }
 
-#left {
+#left, #right {
     position: relative;
     box-sizing: border-box;
-    height: calc(100% - 2*var(--margin)); border: 1px solid black;
+    height: calc(100% - 2*var(--margin));
 }
 
-.scroll-wrapper {
+div.tinker-source {
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.tinker-console-wrapper {
     box-sizing: border-box;
     position: absolute;
     left: 0;
@@ -56,19 +63,14 @@ div.github-buttons {
     width: 100%;
     padding: 5px;
     overflow: auto; display: flex; flex-direction: column-reverse;
+    border: 1px solid black;
 }
-.scroll-start-at-top { flex: 1 1 0%; }
+.tinker-scroll-start-at-top { flex: 1 1 0%; }
 
-.editor-container {
-    height: calc(100% - 2*var(--margin)); width: calc(50% - var(--margin));
-}
-
-#editor {
-    position: relative;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
+.source-files button, .source-files select { height: 26px; }
+.source-files select option.url { color: blue; }
+.source-files .create-file { display: none; }
+form[name=source].create-file .source-files .create-file { display: inline; }
 
 .editor-wrapper {
     border: 1px solid black;
@@ -77,11 +79,7 @@ div.github-buttons {
     flex-grow: 1;
 }
 
-#editor-files button, #editor-files select { height: 26px; }
-
-#editor-files select option.url { color: blue; }
-
-#file {
+.editor-wrapper div[name=editor] {
     box-sizing: border-box;
     border: 0px;
     resize: none;
@@ -99,33 +97,40 @@ div.github-buttons {
     font-size: 130%;
 }
 
-.editor-buttons {
+.source-buttons {
     margin-top: var(--margin);
 }
 
-#input {
+		 /*******************************
+		 *        PROLOG CONSOLE        *
+		 *******************************/
+
+.tinker-input {
     margin-top: 5px;
     box-sizing: border-box;
     width: 100%;
 }
 
 
-#more, #trace { margin-left: 3ex; }
+.tinker-more, .tinker-trace { margin-left: 3ex; }
 
-#input, #more, #trace, #abort, #create-file, #keyboard { display: none }
-.console.prompt      #input { display: flex }
-.console.more        #more  { display: inline-block }
-.console.trace       #trace { display: inline-block }
-.console.run:not(.key) #abort { display: block }
-.console.key         #keyboard { display : block }
-.create-file #create-file   { display: inline; }
+.tinker-input, .tinker-more, .tinker-trace,
+.tinker-abort, .tinker-keyboard { display: none }
 
-#input input { flex-grow: 1; margin: 0px 10px;}
+.tinker-query.read          .query-header    { display: none }
+.tinker-query.read          .tinker-input    { display: flex }
+.tinker-query.prompt        .tinker-input    { display: flex }
+.tinker-query.more          .tinker-more     { display: inline-block }
+.tinker-query.trace         .tinker-trace    { display: inline-block }
+.tinker-query.run:not(.key) .tinker-abort    { display: block }
+.tinker-query.key           .tinker-keyboard { display: block }
 
-#keyboard:focus { outline: 0px; }
-#keyboard > span { color: #888; font-style: italic; font-size: 90%; }
+.tinker-input input { flex-grow: 1; margin: 0px 10px;}
 
-#output {
+.tinker-keyboard:focus { outline: 0px; }
+.tinker-keyboard > span { color: #888; font-style: italic; font-size: 90%; }
+
+.tinker-console-output {
     font-family: monospace;
 }
 .stderr, .stdout, .query-header {
@@ -138,17 +143,19 @@ div.github-buttons {
 div.write { display: contents; }
 
 div.query-header, span.prompt { font-weight: bold; }
+div.query-header span.query-prompt { margin-right: 1ex; }
 .query-header { margin-top: 5px; padding: 3px 0px; display: block; background-color: #add8e6;}
+.tinker-query.engine .query-header { background: #ade6d8; }
 .query-answer:nth-child(even) { background-color: #eee; }
 
-.query-container, .query-answer { position: relative; }
+.tinker-query, .query-answer { position: relative; }
 span.query-buttons { position: absolute; right: 5px; top: 1px; padding: 0px; margin: 0px;
 		     cursor: pointer; color: #666}
 span.query-buttons > span { margin-left: 0.5ex; border: 1px;}
 span.query-buttons > span:hover { color: black; border: 1px solid black;}
-.query-container.collapsed > .query-answers { display: none; }
-.query-container span.query-collapse:before { content: "\1401" }
-.query-container.collapsed span.query-collapse:before { content: "\1405" }
+.tinker-query.collapsed > .query-answers { display: none; }
+.tinker-query span.query-collapse:before { content: "\1401" }
+.tinker-query.collapsed span.query-collapse:before { content: "\1405" }
 span.query-collapse { font-size: 90%; }
 
 span.exch-files {
