--- a/source.css
+++ b/source.css
@@ -40,6 +40,7 @@
 .cm-s-prolog span.cm-head	       {font-weight: bold;}
 .cm-s-prolog span.cm-goal_built_in     {color: blue;}
 .cm-s-prolog span.cm-goal_imported     {color: blue;}
+.cm-s-prolog span.cm-goal_global       {color: #008 !important;} /*navy blue*/
 .cm-s-prolog span.cm-goal_autoload     {color: #008;}
 .cm-s-prolog span.cm-goal_undefined    {color: red;}
 .cm-s-prolog span.cm-goal_dynamic      {color: #f0f;} /*magenta*/
