Fail port colour

--- a/tinker.css
+++ b/tinker.css
@@ -184,6 +184,6 @@ span.exch-files.upload-armed input.upload-file { display: inline; }
 }
 .CodeMirror-trace-call      { background-color: #8df; }
 .CodeMirror-trace-exit      { background-color: #0f0; }
-.CodeMirror-trace-fail      { background-color: #f00; }
+.CodeMirror-trace-fail      { background-color: #ff8787; }
 .CodeMirror-trace-redo      { background-color: #ff0; }
 .CodeMirror-trace-exception { background-color: #f0f; }
